# tcp-socket-chat

./: README.md  main.py  pyproject.toml
client/: __init__.py  client.py  theme.py  tkHyperlinkManager.py  utils.py
client/gui/: chat.py  login.py
common/: __init__.py  constants.py
server/: __init__.py  client_handler.py  server.py
