[project]
name = "tcp-socket-chat"
version = "0.1.0"
description = "A lightweight, multi-threaded chat application built with TCP sockets that enables real-time group communication."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "darkdetect>=0.8.0",
    "emoji>=2.14.1",
    "tkmacosx>=1.0.5",
]
